--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "vue-latest",
-  "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "private": true,
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
+    "dev": "vite",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -17,6 +16,11 @@
   "devDependencies": {
     "@iconify/vue": "^4.0.0",
     "@vitejs/plugin-vue": "^3.2.0",
-    "vite": "^3.2.0"
-  }
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
+    "vite": "^3.2.0",
+    "vue-cli-plugin-tailwind": "~3.0.0"
+  },
+  "type": "module"
 }
