--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cytoscape": "^3.23.0",
+    "cytoscape-bubblesets": "^3.2.0",
+    "cytoscape-expand-collapse": "^4.1.0",
+    "cytoscape-klay": "^3.1.4",
+    "cytoscape-layers": "^2.3.1",
     "echarts": "^5.4.0",
     "element-plus": "^2.2.19",
     "sass": "^1.56.0",
-    "vue": "^3.2.41"
+    "vue": "^3.2.41",
+    "vue-cytoscape": "^1.0.8"
   },
   "devDependencies": {
     "@iconify/vue": "^4.0.0",
